WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218389
Increase camera failing timer to 30 seconds
https://bugs.webkit.org/show_bug.cgi?id=218389
Summary
Increase camera failing timer to 30 seconds
youenn fablet
Reported
2020-10-30 09:27:51 PDT
Increase camera failing timer to 30 seconds
Attachments
Patch
(1.53 KB, patch)
2020-10-30 09:31 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-10-30 09:31:01 PDT
Created
attachment 412758
[details]
Patch
youenn fablet
Comment 2
2020-10-30 09:34:16 PDT
This prevents cases where getUserMedia is called several times in a row to sometimes end up in failing state. We could also try to create one AVVideoCaptureSource per device, like we somehow do in iOS.
EWS
Comment 3
2020-10-30 10:02:52 PDT
Committed
r269190
: <
https://trac.webkit.org/changeset/269190
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412758
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-10-30 10:03:21 PDT
<
rdar://problem/70882880
>
youenn fablet
Comment 5
2021-01-27 06:22:29 PST
***
Bug 220998
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug