Cherry-pick r269190. rdar://problem/70970247

Increase camera failing timer to 30 seconds
    https://bugs.webkit.org/show_bug.cgi?id=218389

    Reviewed by Eric Carlson.

    From testing, 3 seconds is not always enough if getUserMedia is quickly called multiple times.
    Let's increase to 30 seconds to give room for slow systems while still being able to identify failures.

    * platform/mediastream/mac/AVVideoCaptureSource.h:

    Canonical link: https://commits.webkit.org/231062@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269190 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.292@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@269319 268f45cc-cd09-0410-ab3c-d52691b4dbfc